# drender

./: Cargo.toml
doc/: 1_helloWgpu.md  2_basicState.md  3_helloTriangle.md  4_gui.md
src/: lib.rs  main.rs  utils.rs
src/engine/: egui_layer.rs  mod.rs  renderer.rs  state.rs  vertex.rs
src/engine/plugin/: mod.rs
src/engine/renderer/: mod.rs
src/engine/renderer/workflow/: direct.rs  mod.rs  simple.rs
