[package]
name = "drenderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.7"
env_logger = "0.10"
log = "0.4"
wgpu = "0.17.1"
pollster = "0.3"
bytemuck = { version = "1.14", features = [ "derive" ] }
raw-window-handle = "0.5"
egui = "0.23.0"
# epi = "0.17"
egui-wgpu = "0.23"
egui-winit = "0.23"